--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.1",
     "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
+    "fluent-ffmpeg": "^2.1.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
