--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Florian",
   "license": "ISC",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@prisma/client": "^5.21.1",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
