--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
     "prisma": "^5.21.1",
+    "sharp": "^0.33.5",
     "twig": "^1.17.1"
   }
 }
